--- a/package.json
+++ b/package.json
@@ -29,10 +29,12 @@
     "@nestjs/mongoose": "^11.0.1",
     "@nestjs/passport": "^11.0.5",
     "@nestjs/platform-express": "^11.0.1",
+    "@types/cookie-parser": "^1.4.8",
     "@types/passport": "^1.0.17",
     "bcrypt": "^5.1.1",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
+    "cookie-parser": "^1.4.7",
     "dotenv": "^16.4.7",
     "lodash": "^4.17.21",
     "passport": "^0.7.0",
