Refactor to use TypeORM

--- a/package.json
+++ b/package.json
@@ -23,13 +23,14 @@
   "dependencies": {
     "@growthbook/growthbook": "^1.5.1",
     "@nestjs/common": "^11.0.1",
-    "@nestjs/config": "^4.0.0",
+    "@nestjs/config": "^4.0.2",
     "@nestjs/core": "^11.0.1",
     "@nestjs/jwt": "^11.0.0",
     "@nestjs/mapped-types": "^2.1.0",
     "@nestjs/mongoose": "^11.0.1",
     "@nestjs/passport": "^11.0.5",
     "@nestjs/platform-express": "^11.0.1",
+    "@nestjs/typeorm": "^11.0.0",
     "@types/cookie-parser": "^1.4.8",
     "@types/passport": "^1.0.17",
     "bcrypt": "^5.1.1",
@@ -40,8 +41,10 @@
     "lodash": "^4.17.21",
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
+    "pg": "^8.16.3",
     "reflect-metadata": "^0.2.2",
-    "rxjs": "^7.8.1"
+    "rxjs": "^7.8.1",
+    "typeorm": "^0.3.25"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3.2.0",
@@ -56,7 +59,7 @@
     "@types/jest": "^29.5.14",
     "@types/lodash": "^4.17.15",
     "@types/mongoose": "^5.11.96",
-    "@types/node": "^22.10.7",
+    "@types/node": "^22.16.0",
     "@types/passport-jwt": "^4.0.1",
     "@types/supertest": "^6.0.2",
     "eslint": "^9.18.0",
