--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,3 @@
-# MONGO_CONFIG
-MONGO_URI=mongodb+srv://admin:admin@cluster0.wlham.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
-
 # ADMIN_CONFIG
 ADMIN_USERNAME=admin
 ADMIN_PASSWORD=admin
@@ -9,4 +6,10 @@ PORT=3000
 # JWT_CONFIG
 SALT_ROUNDS=10
 JWT_SECRET=thang_pham_1506
-JWT_EXPIRES_IN=3600s
+JWT_ACCESS_TOKEN_EXPIRES_IN=3600s
+COOKIE_REFRESH_TOKEN_EXPIRES_IN=100000
+
+# GROWTHBOOK_CONFIG
+GROWTHBOOK_API_HOST=https://cdn.growthbook.io
+GROWTHBOOK_CLIENT_KEY=sdk-EPaCv1Y3IXYGr
+GROWTHBOOK_TENANT_ID=123
