--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,11 +3,11 @@ services:
     image: postgres:15
     restart: always
     environment:
-      POSTGRES_USER: postgres
-      POSTGRES_PASSWORD: postgres
-      POSTGRES_DB: nestdb
+      POSTGRES_USER: ${DB_USERNAME}
+      POSTGRES_PASSWORD: ${DB_PASSWORD}
+      POSTGRES_DB: ${DB_NAME}
     ports:
-      - '5432:5432'
+      - '${DB_PORT}:5432'
     volumes:
       - pgdata:/var/lib/postgresql/data
 
@@ -16,17 +16,10 @@ services:
     restart: always
     depends_on:
       - db
-    environment:
-      DB_HOST: db
-      DB_PORT: 5432
-      DB_USERNAME: postgres
-      DB_PASSWORD: postgres
-      DB_NAME: nestdb
-      CHOKIDAR_USEPOLLING: "true"
+    env_file: .env
     ports:
-      - '3000:3000'
+      - '${PORT}:${PORT}'
     volumes:
-      - .:/usr/src/app
       - /usr/src/app/node_modules
     command: npm run start:dev
 
