refactor: add source directory volume to docker-compose for improved development workflow

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -21,6 +21,7 @@ services:
       - '${PORT}:${PORT}'
     volumes:
       - /app/node_modules
+      - ./src:/app/src
     command: npm run start:dev
 
 volumes:
