--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,4 +1,4 @@
-# Main Nginx configuration
+# Simple Nginx configuration for Microservices
 user nginx;
 worker_processes auto;
 error_log /var/log/nginx/error.log warn;
