--- a/package.json
+++ b/package.json
@@ -3,22 +3,77 @@
   "version": "1.0.0",
   "description": "Microservices backend with shared common library",
   "private": true,
+  "engines": {
+    "node": ">=20.0.0",
+    "yarn": ">=1.22.0"
+  },
   "scripts": {
-    "build": "tsc --build",
-    "build:watch": "tsc --build --watch",
-    "clean": "tsc --build --clean",
-    "dev:shared": "cd shared-common && npm run watch",
-    "dev:auth": "cd auth-service && npm run start:dev",
-    "dev:main": "cd main-service && npm run start:dev",
-    "dev:gateway": "cd user-permission-gateway && npm run start:dev",
-    "dev:medias": "cd medias-service && npm run start:dev",
-    "dev:all": "concurrently \"npm run dev:shared\" \"npm run dev:auth\" \"npm run dev:main\" \"npm run dev:gateway\" \"npm run dev:medias\"",
-    "docker:dev": "docker-compose -f docker-compose.dev.yml up --build",
-    "docker:prod": "docker-compose -f docker-compose.prod.yml up --build"
+    "build": "yarn workspaces run build",
+    "dev:shared": "yarn workspace shared-common watch",
+    "dev:auth": "yarn workspace auth-service start:dev",
+    "dev:main": "yarn workspace main-service start:dev",
+    "dev:gateway": "yarn workspace user-permission-gateway start:dev",
+    "dev:medias": "yarn workspace medias-service start:dev",
+    "dev:all": "concurrently \"yarn dev:shared\" \"yarn dev:auth\" \"yarn dev:main\" \"yarn dev:gateway\" \"yarn dev:medias\"",
+    "docker:dev": "docker-compose -f docker-compose.yml -f docker-compose.dev.yml up -d --build --remove-orphans",
+    "docker:prod": "docker-compose -f docker-compose.yml -f docker-compose.prod.yml up -d --build --remove-orphans",
+    "docker:down": "docker-compose down",
+    "docker:logs": "docker-compose logs -f",
+    "health": "echo 'Checking service health...' && source .env && echo 'Nginx Gateway:' $(curl -s http://localhost:8080/nginx-health 2>/dev/null | grep -q healthy && echo '✅' || echo '❌') && echo 'Main Service:' $(docker-compose exec -T main-service wget --quiet --tries=1 --spider http://localhost:${MAIN_SERVICE_PORT}/health 2>/dev/null && echo '✅' || echo '❌') && echo 'Auth Service:' $(docker-compose exec -T auth-service wget --quiet --tries=1 --spider http://localhost:${AUTH_SERVICE_PORT}/health 2>/dev/null && echo '✅' || echo '❌') && echo 'Medias Service:' $(docker-compose exec -T medias-service wget --quiet --tries=1 --spider http://localhost:${MEDIAS_SERVICE_PORT}/health 2>/dev/null && echo '✅' || echo '❌') && echo 'Gateway Service:' $(docker-compose exec -T user-permission-gateway wget --quiet --tries=1 --spider http://localhost:${USER_PERMISSION_GATEWAY_PORT}/health 2>/dev/null && echo '✅' || echo '❌')"
+  },
+  "dependencies": {
+    "@nestjs/common": "^11.0.1",
+    "@nestjs/config": "^4.0.2",
+    "@nestjs/core": "^11.0.1",
+    "@nestjs/microservices": "^11.0.1",
+    "@nestjs/passport": "^11.0.5",
+    "@nestjs/platform-express": "^11.0.1",
+    "@nestjs/typeorm": "^11.0.0",
+    "amqp-connection-manager": "^4.1.14",
+    "amqplib": "^0.10.4",
+    "bcrypt": "^5.1.1",
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.14.1",
+    "cookie-parser": "^1.4.6",
+    "passport": "^0.7.0",
+    "passport-jwt": "^4.0.1",
+    "pg": "^8.11.3",
+    "reflect-metadata": "^0.2.2",
+    "rxjs": "^7.8.1",
+    "typeorm": "^0.3.25"
   },
   "devDependencies": {
+    "@eslint/eslintrc": "^3.2.0",
+    "@eslint/js": "^9.18.0",
+    "@nestjs/cli": "^11.0.0",
+    "@nestjs/schematics": "^11.0.0",
+    "@nestjs/testing": "^11.0.1",
+    "@swc/cli": "^0.6.0",
+    "@swc/core": "^1.10.7",
+    "@types/amqplib": "^0.10.5",
+    "@types/bcrypt": "^5.0.2",
+    "@types/cookie-parser": "^1.4.7",
+    "@types/pg": "^8.10.9",
+    "@types/express": "^5.0.0",
+    "@types/jest": "^29.5.14",
+    "@types/node": "^22.16.0",
+    "@types/passport-jwt": "^4.0.1",
+    "@types/supertest": "^6.0.2",
     "concurrently": "^9.2.1",
-    "typescript": "^5.7.3"
+    "eslint": "^9.18.0",
+    "eslint-config-prettier": "^10.0.1",
+    "eslint-plugin-prettier": "^5.2.2",
+    "globals": "^15.14.0",
+    "jest": "^29.7.0",
+    "prettier": "^3.4.2",
+    "source-map-support": "^0.5.21",
+    "supertest": "^7.0.0",
+    "ts-jest": "^29.2.5",
+    "ts-loader": "^9.5.2",
+    "ts-node": "^10.9.2",
+    "tsconfig-paths": "^4.2.0",
+    "typescript": "^5.7.3",
+    "typescript-eslint": "^8.20.0"
   },
   "workspaces": [
     "shared-common",
@@ -26,5 +81,6 @@
     "main-service",
     "user-permission-gateway",
     "medias-service"
-  ]
+  ],
+  "packageManager": "yarn@1.22.22"
 }
