--- a/shared-common/package.json
+++ b/shared-common/package.json
@@ -6,6 +6,7 @@
   "dependencies": {
     "@growthbook/growthbook": "^1.6.1",
     "@nestjs/common": "^11.0.1",
+    "@nestjs/config": "^4.0.2",
     "@nestjs/core": "^11.0.1",
     "@nestjs/microservices": "^11.0.1",
     "@nestjs/passport": "^11.0.5",
@@ -22,9 +23,7 @@
   },
   "devDependencies": {
     "@types/cookie-parser": "^1.4.7",
-    "@types/node": "^22.16.0",
-    "@types/passport-jwt": "^4.0.1",
-    "typescript": "^5.7.3"
+    "@types/passport-jwt": "^4.0.1"
   },
   "scripts": {
     "build": "tsc --build",
