refactor: rename medias service to media service across configurations and update related paths for consistency

--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -24,13 +24,13 @@ services:
     environment:
       - NODE_ENV=development
 
-  medias-service:
+  media-service:
     build:
       context: .
-      dockerfile: ./medias-service/Dockerfile
+      dockerfile: ./media-service/Dockerfile
       target: development
     volumes:
-      - ./medias-service:/app/medias-service
+      - ./media-service:/app/media-service
       - ./shared-common:/app/shared-common
       - /app/node_modules
       - ./storage:/app/storage
