--- a/nginx/conf.d/default.conf
+++ b/nginx/conf.d/default.conf
@@ -61,45 +61,45 @@ server {
         error_page 502 503 504 = @service_fallback;
     }
 
-    # Medias Service routes - COMMENTED OUT (not fully implemented yet)
-    # location /api/medias/ {
-    #     limit_req zone=api burst=20 nodelay;
-    #     
-    #     # Handle preflight OPTIONS requests
-    #     if ($request_method = 'OPTIONS') {
-    #         add_header Access-Control-Allow-Origin "http://localhost:5173" always;
-    #         add_header Access-Control-Allow-Methods "GET, POST, PUT, PATCH, DELETE, OPTIONS" always;
-    #         add_header Access-Control-Allow-Headers "Content-Type, Authorization, X-Requested-With" always;
-    #         add_header Access-Control-Allow-Credentials "true" always;
-    #         add_header Access-Control-Max-Age 86400;
-    #         add_header Content-Length 0;
-    #         add_header Content-Type text/plain;
-    #         return 204;
-    #     }
-    #     
-    #     # Remove /api prefix and proxy to medias-service
-    #     rewrite ^/api/(.*) /$1 break;
-    #     proxy_pass http://medias-service/;
-    #     
-    #     # Common proxy settings
-    #     proxy_set_header Host $host;
-    #     proxy_set_header X-Real-IP $remote_addr;
-    #     proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-    #     proxy_set_header X-Forwarded-Proto $scheme;
-    #     
-    #     # Timeout settings
-    #     proxy_connect_timeout 30s;
-    #     proxy_send_timeout 30s;
-    #     proxy_read_timeout 30s;
-    #     
-    #     # Error handling
-    #     proxy_next_upstream error timeout invalid_header http_500 http_502 http_503 http_504;
-    #     proxy_next_upstream_tries 2;
-    #     proxy_next_upstream_timeout 10s;
-    #     
-    #     # Fallback response
-    #     error_page 502 503 504 = @service_fallback;
-    # }
+    # Media Service routes
+    location /api/medias/ {
+        limit_req zone=api burst=20 nodelay;
+        
+        # Handle preflight OPTIONS requests
+        if ($request_method = 'OPTIONS') {
+            add_header Access-Control-Allow-Origin "http://localhost:5173" always;
+            add_header Access-Control-Allow-Methods "GET, POST, PUT, PATCH, DELETE, OPTIONS" always;
+            add_header Access-Control-Allow-Headers "Content-Type, Authorization, X-Requested-With" always;
+            add_header Access-Control-Allow-Credentials "true" always;
+            add_header Access-Control-Max-Age 86400;
+            add_header Content-Length 0;
+            add_header Content-Type text/plain;
+            return 204;
+        }
+        
+        # Remove /api prefix and proxy to media-service
+        rewrite ^/api/(.*) /$1 break;
+        proxy_pass http://media-service/;
+        
+        # Common proxy settings
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+        
+        # Timeout settings
+        proxy_connect_timeout 30s;
+        proxy_send_timeout 30s;
+        proxy_read_timeout 30s;
+        
+        # Error handling
+        proxy_next_upstream error timeout invalid_header http_500 http_502 http_503 http_504;
+        proxy_next_upstream_tries 2;
+        proxy_next_upstream_timeout 10s;
+        
+        # Fallback response
+        error_page 502 503 504 = @service_fallback;
+    }
 
     # All other API routes - proxy to main-service
     location /api/ {
@@ -143,7 +143,7 @@ server {
 
     # Default route - show available endpoints
     location / {
-        return 200 '{"message": "API Gateway", "services": {"auth": "/api/auths/", "main": "/api/ (user, role, health modules)", "medias": "/api/medias/ (commented out)"}, "health_check": "/nginx-health"}';
+        return 200 '{"message": "API Gateway", "services": {"auth": "/api/auths/", "main": "/api/ (user, role, health modules)", "media": "/api/medias/ (ready)"}, "health_check": "/nginx-health"}';
         add_header Content-Type application/json;
     }
 
