--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -59,10 +59,9 @@ http {
         server auth-service:3002;
     }
 
-    # Medias service upstream - COMMENTED OUT (not fully implemented yet)
-    # upstream medias-service {
-    #     server medias-service:3001;
-    # }
+    upstream media-service {
+        server media-service:3001;
+    }
 
     upstream user-permission-gateway {
         server user-permission-gateway:3004;
