--- a/media-service/package.json
+++ b/media-service/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "medias-service",
+  "name": "media-service",
   "version": "0.0.1",
   "description": "",
   "author": "",
@@ -8,10 +8,10 @@
   "scripts": {
     "build": "nest build",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
-    "start": "node dist/medias-service/src/main.js",
+    "start": "node dist/media-service/src/main.js",
     "start:dev": "nest start --watch",
     "start:debug": "nest start --debug --watch",
-    "start:prod": "node dist/medias-service/src/main.js",
+    "start:prod": "node dist/media-service/src/main.js",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
     "test": "jest",
     "test:watch": "jest --watch",
